<resources>
    <string name="app_name">Humanitare</string>
    <string name="txt_welcome_heading">Dobrodošli</string>
    <string name="txt_wallet_heading">Moj Profil</string>
    <string name="txt_wallet_transactions">Transakcije</string>
    <string name="txt_welcome_subtitle">Pomoći potrebitima nikad nije bilo lakše</string>
    <string name="txt_no_wallet"><u>Nemam još kripto novčanik</u></string>
    <string name="btn_tutorial_text"><u>Natrag</u></string>
    <string name="btn_landing_text"><u>Spremi</u></string>
    <string name="btn_donate_text"><u>Kako Donirati ?</u></string>
    <string name="btn_copy_address"><u>Kopiraj Adresu</u></string>
    <string name="btn_info_wallet"><u>Otvaranje Novcanika</u></string>
    <string name="btn_landing_skip_text"><u>Preskoči</u></string>
    <string name="btn_charity_text"><u>Moj Profil</u></string>
    <string name="txt_profile_hint"><u>Hint: Format adrese novčanika kriptovaluta sadrži prefiks "0x" i zatim 40 alfanumeričkih znakova.</u></string>
    <string name="txt_landing_hint"><u>Unesi adresu kripto novčanika</u></string>
    <string name="txt_landing_content_description"><u>Logo image</u></string>
    <string name="txt_tutorial_heading">Kako otvoriti kripto novčanik?</string>
    <string name="txt_tutorial_description">Kako bi uplatili kriptovalute na račun željene udruge, potrebno je imati otvoren kripto novčanik. \nPostoji nekoliko različitih vrsti kripto novčanika od kojih su najlakši za korištenje upravo mobilni novčanici. Nakon što ste otvorili novčanik, dobit će te vlastitu "adresu" novčanika na koju uplaćujete kriptovalute i s koje vršite transfer na račun željene humanitarne udruge.</string>
    <string name="txt_tutorial_option_one_heading">Opcija #1 - Kriptomjenjačnica</string>
    <string name="txt_tutorial_option_one_text">Jedna od mogućnosti otvaranja novčanika za kriptovalute je putem kriptomjenjačnica. Neke od najpoznatijih mjenjačnica uključuju Binance, Crypto.com, Coinbase i ostale. \nPrednost otvaranja novčanika na ovim mjenjačnicama je laka registracija i laka uplata stvarnog novca koji kasnije možete konvertirati u kriptovalute. \nNedostatak je sigurnost jer ako hakeri uspješno provale u mjenjačnicu, možete ostati bez svojih kriptovaluta. Velika većina ljudi kupuje kriptovalute na ovim mjenjačnicama te ih zatim iz sigurnosnih razloga šalju na novčanik koji je isključivo u njihovom vlasništvu.</string>
    <string name="txt_tutorial_option_two_heading">Opcija #2 - Mobilni novčanici</string>
    <string name="txt_tutorial_option_two_text">Mobilni novčanici su idealni za brzo raspolaganje kriptovalutama, a neki čak nude i kupovinu kriptovaluta sa stvarnim novcem. \nNajpoznatija dva su MetaMask i Trust Wallet koje besplatno možete preuzeti s Google Trgovine Aplikacijama. \nNakon preuzimanja, pokrenite aplikaciju i slijedite korake koji su navedeni. \nBitno je da nakon uspješnog otvaranja kripto novčanika dodate i Polygon (MATIC) mrežu ulančanih blokova jer na njoj humanitarne udruge dostupne u ovoj aplikaciji imaju svoje novčanike.</string>
    <string name="txt_tutorial_option_three_heading">Opcija #3 - Desktop Novčanici</string>
    <string name="txt_tutorial_option_three_text">Desktop novčanici su nešto rjeđe korišteni, ali svejedno jedna od mogućnosti. Ovakav tip novčanika preuzimate na osobno računalo. \nPostoje verzije koje preuzimate na računalo, a postoje i novčanici koje dodajete kao ekstenziju u internet pretraživač. \nJedna od takvih ekstenzija je prijašnje spomenuti MetaMask koji ima i mobilnu aplikaciju. Velika većina ovakvih novčanika je potpuno besplatna i sigurna, no generalni savjet je držati se najpopularnijih novčanika kao što je MetaMask zbog sigurnosnih razloga.</string>
    <string name="txt_charity_list_heading">Lista udruga</string>
    <string name="txt_charity_list_choose">Odaberite udrugu</string>
    <string name="txt_charity_list_quote">"Jedna od najvažnijih stvari koju možete učiniti na ovoj zemlji je dati ljudima do znanja da nisu sami."</string>
    <string name="txt_charity_list_note">"Napomena: Pritiskom na udrugu otvara se njezin profil."</string>
    <string name="txt_charity_profile_heading">Ime Udruge</string>
    <string name="txt_charity_profile_description">Opis Udruge</string>
    <string name="txt_charity_profile_balance">Stanje Računa:</string>
    <string name="txt_charity_profile_error">ERROR: Ne mogu dohvatiti podatke s blockchaina.</string>
    <string name="txt_charity_profile_error_reminder">Provjerite imate li valjanu internet vezu.</string>
    <string name="txt_charity_profile_balance_placeholder">- MATIC</string>
    <string name="txt_charity_profile_transactions_placeholder">127</string>
    <string name="txt_donation_header">Kako donirati?</string>
    <string name="txt_donation_step_one">1) Kopirati adresu kripto novčanika</string>
    <string name="txt_donation_step_one_details">Adresa se kopira pritiskom na gumb "Kopiraj Adresu" na prošlom ekranu.</string>
    <string name="txt_donation_step_two">2) Otvorite Vaš kripto novčanik</string>
    <string name="txt_donation_step_two_details">Ako već nemate otvoren kripto novčanik, pritisnite na gumb `Otvaranje Novcanika` ispod ovog teksta. Ako imate novčanik, pokrenite aplikaciju i provjerite da ste na Polygon (MATIC) mreži ulančanih blokova.</string>
    <string name="txt_donation_step_two_note">Primjer: Kako bi omogućili Polygon mrežu na MetaMask novčaniku, potrebno je u gornjem dijelu pritisnuti na "Ethereum Main Network", zatim "Add a network" i konačno dodati Polygon Mainnet.</string>
    <string name="txt_donation_step_three">3) Zaljepiti adresu udruge</string>
    <string name="txt_donation_step_three_details">Adresu koju ste prethodno kopirali je potrebno zaljepiti u primatelja i unijeti iznos koji donirate. Potvrdite transakciju i kriptovalute će biti donirane.</string>
    <string name="txt_donation_end_heading">Čestitamo!</string>
    <string name="txt_donation_end_description">Uspješno ste donirali udruzi po želji. Transakcija će biti vidljiva na Vašem profilu i lancu ulančanih blokova kroz nekoliko minuta.</string>


</resources>