<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LandingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/txt_landing_content_description"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_width="250dp"
            android:layout_height="200dp"
            app:lottie_fileName="humanitare.json"
            app:lottie_autoPlay="true"
            app:lottie_speed="0.5"
            app:lottie_loop="true"/>

        <TextView
            android:id="@+id/lblWelcomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:gravity="center"
android:text="@string/app_name"
            android:textSize="@dimen/text_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <TextView
            android:id="@+id/lblWelcomeSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_welcome_subtitle"
            android:textSize="@dimen/text_medium"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblWelcomeTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtWelcomeWalletLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:hint="@string/txt_landing_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblWelcomeSubtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtWelcomeWalletInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtLandingHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcomeWalletLayout"
            android:text="@string/txt_profile_hint"/>

        <TextView
            android:id="@+id/lblWelcomeNoWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/txt_no_wallet"
            android:textColor="@color/link"
            android:textSize="@dimen/text_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLandingHint" />

        <Button
            android:id="@+id/btnLandingSaveWallet"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/btn_landing_text"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/lblWelcomeNoWallet"
            android:layout_marginTop="@dimen/margin_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/btn_landing_skip_text"
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnLandingSaveWallet"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>