<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TutorialActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/margin_large">

        <TextView
            android:id="@+id/lblTutorialTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:gravity="center"
            android:text="@string/txt_tutorial_heading"
            android:textSize="@dimen/text_large"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
             />
        <TextView
            android:id="@+id/lblTutorialDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/txt_tutorial_description"
            android:layout_marginTop="@dimen/margin_normal"
            android:textAlignment="center"
            android:paddingHorizontal="@dimen/margin_normal"
            app:layout_constraintTop_toBottomOf="@id/lblTutorialTitle"/>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgExchange"
            app:layout_constraintTop_toBottomOf="@id/lblTutorialOptionOneDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:lottie_fileName="crypto-exchange.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:id="@+id/lblTutorialOptionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lblTutorialDescription"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:paddingHorizontal="@dimen/margin_normal"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:text="@string/txt_tutorial_option_one_heading"
            />
        <TextView
            android:id="@+id/lblTutorialOptionOneDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lblTutorialOptionOne"
            android:paddingHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:textSize="@dimen/text_small"
            android:text="@string/txt_tutorial_option_one_text"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/lblTutorialOptionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgExchange"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingHorizontal="@dimen/margin_normal"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:text="@string/txt_tutorial_option_two_heading"
            />
        <TextView
            android:id="@+id/lblTutorialOptionTwoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lblTutorialOptionTwo"
            android:paddingHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:textSize="@dimen/text_small"
            android:text="@string/txt_tutorial_option_two_text"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgMobileWallet"
            app:layout_constraintTop_toBottomOf="@id/lblTutorialOptionTwoDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:lottie_fileName="mobile-wallet.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:id="@+id/lblTutorialOptionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgMobileWallet"
            android:layout_marginTop="@dimen/margin_large"
            android:paddingHorizontal="@dimen/margin_normal"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            android:text="@string/txt_tutorial_option_three_heading"
            />
        <TextView
            android:id="@+id/lblTutorialOptionThreeDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lblTutorialOptionThree"
            android:paddingHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:textSize="@dimen/text_small"
            android:text="@string/txt_tutorial_option_three_text"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imgDesktopWallet"
            app:layout_constraintTop_toBottomOf="@id/lblTutorialOptionThreeDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:lottie_fileName="desktop-wallet.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <Button
            android:id="@+id/btnCharityOrganizations"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/btn_tutorial_text"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_normal"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/imgDesktopWallet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>