<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CharityListActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <TextView
        android:id="@+id/lblCharityTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnCharityProfile"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:gravity="center"
        android:text="@string/txt_charity_list_choose"
        android:textSize="@dimen/text_xlarge"/>

    <TextView
        android:id="@+id/txtLogoCharity"
        android:text="@string/txt_charity_list_quote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblCharityTitle"
        android:textSize="@dimen/text_medium"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:contentDescription="@string/txt_landing_content_description"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingHorizontal="@dimen/margin_large"
        android:textAlignment="center"
        android:textStyle="italic"/>

    <TextView
        android:id="@+id/lblCharityListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:gravity="center"
        android:text="@string/txt_charity_list_heading"
        android:textSize="@dimen/text_large"
        app:layout_constraintTop_toBottomOf="@id/txtLogoCharity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/viewPagerOrganizations"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerOrganizations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lblCharityListTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_large"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <ImageView
        android:id="@+id/imgArrowRight"
        app:layout_constraintTop_toTopOf="@id/viewPagerOrganizations"
        app:layout_constraintBottom_toBottomOf="@id/viewPagerOrganizations"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:src="@drawable/arrowr"
        android:layout_marginRight="@dimen/margin_large"/>

    <ImageView
        android:id="@+id/imgArrowLeft"
        app:layout_constraintTop_toTopOf="@id/viewPagerOrganizations"
        app:layout_constraintBottom_toBottomOf="@id/viewPagerOrganizations"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:src="@drawable/arrowl"
        android:layout_marginLeft="@dimen/margin_large"/>

    <Button
        android:id="@+id/btnCharityProfile"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/btn_charity_text"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@color/gold"
            android:text="@string/txt_charity_list_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPagerOrganizations"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>